--- a/car_rental_frontend/package.json
+++ b/car_rental_frontend/package.json
@@ -15,12 +15,10 @@
     "http-proxy-middleware": "^3.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^0.0.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
-  
-
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
